Adicionado informação de especie na hora do registro de um animal 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="app_name">CadêMeuPet</string>
     <string name="facebook_app_id">1217099188350148</string>
     <string name="title_activity_pets_vault">PetsVaultActivity</string>
+    <string-array name="array_species">
+        <item>Cat</item>
+        <item>Dog</item>
+    </string-array>
 </resources>
