Adicionado google maps ao aplicativo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
         <item>Cat</item>
         <item>Dog</item>
     </string-array>
+    <string name="title_activity_pet_location">Map</string>
 </resources>
